[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Main/ScoreUI.gd" type="Script" id=1]

[sub_resource type="Animation" id=2]
resource_name = "BestPlayerUpdate"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("BestPlayerChange:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BestPlayerChange:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 480, 30 ), Vector2( 800, 30 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "HighScoreUpdate"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("HighScoreChange:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HighScoreChange:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 480, 5 ), Vector2( 800, 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/PanelContainer/VSplitContainer/HighScore:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.85098, 1, 0.862745, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Reset"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("HighScoreChange:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BestPlayerChange:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/PanelContainer/VSplitContainer/HighScore:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CenterContainer/PanelContainer/VSplitContainer/BestPlayerScore:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "BestPlayerUpdate"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("BestPlayerChange:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BestPlayerChange:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 480, 30 ), Vector2( 800, 30 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "HighScoreUpdate"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("HighScoreChange:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HighScoreChange:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 480, 5 ), Vector2( 800, 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/PanelContainer/VSplitContainer/HighScore:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.85098, 1, 0.862745, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Reset"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("HighScoreChange:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BestPlayerChange:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/PanelContainer/VSplitContainer/HighScore:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CenterContainer/PanelContainer/VSplitContainer/BestPlayerScore:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="ScoreUI" type="Control"]
anchor_right = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 293.0
margin_right = 507.0
margin_bottom = 54.0

[node name="VSplitContainer" type="VSplitContainer" parent="CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 207.0
margin_bottom = 47.0

[node name="HighScore" type="Label" parent="CenterContainer/PanelContainer/VSplitContainer"]
margin_right = 200.0
margin_bottom = 14.0
rect_min_size = Vector2( 200, 0 )
text = "High Score:  0"

[node name="BestPlayerScore" type="Label" parent="CenterContainer/PanelContainer/VSplitContainer"]
margin_top = 26.0
margin_right = 200.0
margin_bottom = 40.0
text = "Best Player: 0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/BestPlayerUpdate = SubResource( 2 )
anims/HighScoreUpdate = SubResource( 1 )
anims/Reset = SubResource( 3 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/BestPlayerUpdate = SubResource( 4 )
anims/HighScoreUpdate = SubResource( 5 )
anims/Reset = SubResource( 6 )

[node name="HighScoreChange" type="Label" parent="."]
visible = false
margin_left = 480.0
margin_top = 5.0
margin_right = 520.0
margin_bottom = 19.0
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestPlayerChange" type="Label" parent="."]
visible = false
margin_left = 480.0
margin_top = 30.0
margin_right = 520.0
margin_bottom = 44.0
text = "100"
